--- a/src/main/resources/connectrrr.fxml
+++ b/src/main/resources/connectrrr.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane hgap="10" prefHeight="369.0" prefWidth="527.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.ConnectController">
+<!--com.gjvandersloot.ConnectController-->
+<GridPane fx:controller="com.gjvandersloot.ConnectController" hgap="10" prefHeight="369.0" prefWidth="527.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1">
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
 
 
