--- a/src/main/resources/AzureAuthDialog.fxml
+++ b/src/main/resources/AzureAuthDialog.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" prefHeight="175.0" prefWidth="212.0" spacing="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="201.0" prefWidth="212.0" spacing="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.AzureAuthController">
     <padding>
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
