--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -33,21 +33,21 @@
         <Button alignment="TOP_CENTER" style="-fx-font-weight: bold;" text="+" prefWidth="100" onMouseClicked="#addSubscription" />
       <Accordion>
         <panes>
-<!--          <TitledPane animated="false" text="untitled 1">-->
-<!--            <content>-->
-<!--              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />-->
-<!--            </content>-->
-<!--          </TitledPane>-->
-<!--          <TitledPane animated="false" text="untitled 2">-->
-<!--            <content>-->
-<!--              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />-->
-<!--            </content>-->
-<!--          </TitledPane>-->
-<!--          <TitledPane animated="false" text="untitled 3">-->
-<!--            <content>-->
-<!--              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />-->
-<!--            </content>-->
-<!--          </TitledPane>-->
+          <TitledPane animated="false" text="untitled 1">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </TitledPane>
+          <TitledPane animated="false" text="untitled 2">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </TitledPane>
+          <TitledPane animated="false" text="untitled 3">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </TitledPane>
         </panes>
       </Accordion>
     </VBox>
