--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<!--<GridPane fx:controller="com.gjvandersloot.controller.ConnectController" hgap="10" prefHeight="369.0" prefWidth="527.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1">-->
+<!--<GridPane fx:controller="com.gjvandersloot.controller.MainController" hgap="10" prefHeight="369.0" prefWidth="527.0" vgap="10" xmlns:fx="http://javafx.com/fxml/1">-->
 <!--    <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>-->
 <!--    <HBox>-->
 <!--    </HBox>-->
@@ -23,7 +23,7 @@
 <!--   </rowConstraints>-->
 <!--</GridPane>-->
 
-<GridPane prefWidth="567.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.ConnectController">
+<GridPane prefWidth="567.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
     <columnConstraints>
         <ColumnConstraints percentWidth="20" />
         <ColumnConstraints percentWidth="80" />
