--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -33,16 +33,16 @@
         <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
       <Accordion fx:id="accordion">
         <panes>
-            <TitledPane animated="false" text="untitled 1">
+            <TitledPane text="untitled 1">
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
                      <ListView layoutX="-54.0" layoutY="-44.0" prefHeight="200.0" prefWidth="200.0" />
                   </children></AnchorPane>
             </TitledPane>
-            <TitledPane animated="false" text="untitled 2">
+            <TitledPane text="untitled 2">
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </TitledPane>
-            <TitledPane animated="false" text="untitled 3">
+            <TitledPane text="untitled 3">
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
             </TitledPane>
         </panes>
