--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -3,30 +3,88 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane prefWidth="567.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
-    <columnConstraints>
-        <ColumnConstraints percentWidth="20" />
-        <ColumnConstraints percentWidth="80" />
-    </columnConstraints>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.gjvandersloot.controller.MainController">
+    <top>
+        <VBox>
+            <MenuBar>
+                <menus>
+                    <Menu text="File">
+                        <items>
+<!--                            <MenuItem text="New" onAction="#onNew"/>-->
+<!--                            <MenuItem text="Open" onAction="#onOpen"/>-->
+                            <MenuItem text="New"/>
+                            <MenuItem text="Open"/>
+                        </items>
+                    </Menu>
+                    <!-- …other menus… -->
+                </menus>
+            </MenuBar>
 
-    <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="129.0" spacing="10" style="-fx-background-color: #f0f0f0; -fx-padding: 10" GridPane.columnIndex="0">
-        <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
-        <TreeView fx:id="treeView" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" onMouseClicked="#treeViewClicked">
+            <!-- Toolbar just below the menu -->
+            <ToolBar>
+                <items>
+<!--                    <Button text="New" onAction="#onNew"/>-->
+<!--                    <Button text="Edit" onAction="#onEdit"/>-->
+<!--                    <Button text="Copy" onAction="#onCopy"/>-->
+<!--                    <Button text="Show" onAction="#onShow"/>-->
+<!--                    <Separator orientation="VERTICAL"/>-->
+<!--                    <Button text="Help" onAction="#onHelp"/>-->
+                        <Button text="New" />
+                        <Button text="Edit" />
+                        <Button text="Copy" />
+                        <Button text="Show" onAction="#showSecret" />
+                        <Separator orientation="VERTICAL"/>
+                        <Button text="Help" />
+                </items>
+            </ToolBar>
+        </VBox>
+    </top>
+    <center>
+        <GridPane prefWidth="567.0">
+            <columnConstraints>
+                <ColumnConstraints percentWidth="20"/>
+                <ColumnConstraints percentWidth="80"/>
+            </columnConstraints>
 
-        </TreeView>
-    </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="129.0" spacing="10"
+                  style="-fx-background-color: #f0f0f0; -fx-padding: 10" GridPane.columnIndex="0">
+                <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100"
+                        style="-fx-font-weight: bold;" text="Add account"/>
+                <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="200.0" prefWidth="200.0"
+                          VBox.vgrow="ALWAYS">
 
-    <VBox prefHeight="291.0" prefWidth="454.0" spacing="10" style="-fx-padding: 10" GridPane.columnIndex="1">
-      <Button disable="true" mnemonicParsing="false" text="Load secret" />
-        <TableView fx:id="secretsTable" prefHeight="434.0" prefWidth="483.0" VBox.vgrow="ALWAYS">
-            <columns>
-                <TableColumn fx:id="secretsColumn" prefWidth="150" text="Name" />
-                <TableColumn fx:id="emailColumn" prefWidth="200" text="Email" />
-            </columns>
-        </TableView>
-    </VBox>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+                </TreeView>
+            </VBox>
 
-</GridPane>
+            <VBox prefHeight="291.0" prefWidth="454.0" spacing="10" style="-fx-padding: 10" GridPane.columnIndex="1">
+                <!--        <HBox spacing="10">-->
+                <!--            <Button disable="true" mnemonicParsing="false" text="show" />-->
+                <!--            <Button disable="true" mnemonicParsing="false" text="copy" />-->
+                <!--            <Button disable="true" mnemonicParsing="false" text="edit" />-->
+                <!--            <Button disable="true" mnemonicParsing="false" text="delete" />-->
+                <!--            <Button disable="true" mnemonicParsing="false" text="add" />-->
+                <!--        </HBox>-->
+                <TableView fx:id="secretsTable" prefHeight="434.0" prefWidth="483.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="secretName"/>
+                            </cellValueFactory>
+                        </TableColumn>
+                        <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value">
+                            <cellValueFactory>
+                                <PropertyValueFactory property="secretValue"/>
+                            </cellValueFactory>
+                        </TableColumn>
+                    </columns>
+                </TableView>
+            </VBox>
+            <rowConstraints>
+                <RowConstraints/>
+            </rowConstraints>
+
+        </GridPane>
+    </center>
+</BorderPane>
