--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.gjvandersloot.controller.MainController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
     <top>
         <VBox>
             <MenuBar>
@@ -14,67 +13,47 @@
                         <items>
 <!--                            <MenuItem text="New" onAction="#onNew"/>-->
 <!--                            <MenuItem text="Open" onAction="#onOpen"/>-->
-                            <MenuItem text="New"/>
-                            <MenuItem text="Open"/>
+                            <MenuItem text="New" />
+                            <MenuItem text="Open" />
                         </items>
                     </Menu>
                     <!-- …other menus… -->
                 </menus>
             </MenuBar>
-
-            <!-- Toolbar just below the menu -->
-            <ToolBar>
-                <Button text="Copy" onAction="#copySecret" />
-                <Button fx:id="show" text="Show" onAction="#showSecret" />
-                <Separator orientation="VERTICAL"/>
-                <Button text="New"/>
-            </ToolBar>
         </VBox>
     </top>
     <center>
-        <GridPane prefWidth="567.0">
-            <columnConstraints>
-                <ColumnConstraints percentWidth="20"/>
-                <ColumnConstraints percentWidth="80"/>
-            </columnConstraints>
-
-            <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="129.0" spacing="10"
-                  style="-fx-background-color: #f0f0f0; -fx-padding: 10" GridPane.columnIndex="0">
-                <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100"
-                        style="-fx-font-weight: bold;" text="Add account"/>
-                <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="200.0" prefWidth="200.0"
-                          VBox.vgrow="ALWAYS">
+        <SplitPane dividerPositions="0.3">
+            <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="150.0" GridPane.columnIndex="0">
+                <ToolBar style="-fx-background-color: #f0f0f0;">
+                    <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
+                </ToolBar>
+                <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="494.0" prefWidth="150.0" VBox.vgrow="ALWAYS">
 
                 </TreeView>
             </VBox>
-
-            <VBox prefHeight="291.0" prefWidth="454.0" spacing="10" style="-fx-padding: 10" GridPane.columnIndex="1">
-                <!--        <HBox spacing="10">-->
-                <!--            <Button disable="true" mnemonicParsing="false" text="show" />-->
-                <!--            <Button disable="true" mnemonicParsing="false" text="copy" />-->
-                <!--            <Button disable="true" mnemonicParsing="false" text="edit" />-->
-                <!--            <Button disable="true" mnemonicParsing="false" text="delete" />-->
-                <!--            <Button disable="true" mnemonicParsing="false" text="add" />-->
-                <!--        </HBox>-->
+            <VBox prefHeight="291.0" prefWidth="454.0" GridPane.columnIndex="1">
+               <ToolBar style="-fx-background-color: #f0f0f0">
+                   <Button onAction="#copySecret" text="Copy" />
+                   <Button fx:id="show" onAction="#showSecret" text="Show" />
+                   <Separator orientation="VERTICAL" />
+                   <Button text="New" />
+               </ToolBar>
                 <TableView fx:id="secretsTable" prefHeight="434.0" prefWidth="483.0" VBox.vgrow="ALWAYS">
                     <columns>
                         <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name">
                             <cellValueFactory>
-                                <PropertyValueFactory property="secretName"/>
+                                <PropertyValueFactory property="secretName" />
                             </cellValueFactory>
                         </TableColumn>
                         <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value">
                             <cellValueFactory>
-                                <PropertyValueFactory property="secretValue"/>
+                                <PropertyValueFactory property="display" />
                             </cellValueFactory>
                         </TableColumn>
                     </columns>
                 </TableView>
             </VBox>
-            <rowConstraints>
-                <RowConstraints/>
-            </rowConstraints>
-
-        </GridPane>
+        </SplitPane>
     </center>
 </BorderPane>
