--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -27,6 +27,7 @@
             <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="150.0" GridPane.columnIndex="0">
                 <ToolBar style="-fx-background-color: #f0f0f0;">
                     <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
+               <Hyperlink text="Refresh" onAction="#reloadTree" />
                 </ToolBar>
                 <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="494.0" prefWidth="150.0" VBox.vgrow="ALWAYS">
 
@@ -37,7 +38,7 @@
                    <Button onAction="#copySecret" text="Copy" />
                    <Button fx:id="show" onAction="#showSecret" text="Show" />
                    <Separator orientation="VERTICAL" />
-                   <Button text="New" onAction="#addSecret" />
+                   <Button onAction="#addSecret" text="New" />
                </ToolBar>
                 <TableView fx:id="secretsTable" prefHeight="434.0" prefWidth="483.0" VBox.vgrow="ALWAYS">
                     <columns>
