--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -27,8 +27,9 @@
             <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="150.0" GridPane.columnIndex="0">
                 <ToolBar style="-fx-background-color: #f0f0f0;">
                     <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
-               <Hyperlink text="Refresh" onAction="#reloadTree" />
+               <Hyperlink onAction="#reloadTree" text="Refresh" />
                 </ToolBar>
+            <TextField fx:id="treeFilter" promptText="Search" />
                 <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="494.0" prefWidth="150.0" VBox.vgrow="ALWAYS">
 
                 </TreeView>
@@ -39,6 +40,8 @@
                    <Button fx:id="show" onAction="#showSecret" text="Show" />
                    <Separator orientation="VERTICAL" />
                    <Button onAction="#addSecret" text="New" />
+                   <Separator orientation="VERTICAL" />
+                   <TextField fx:id="filterField" promptText="Search secret" />
                </ToolBar>
                 <TableView fx:id="secretsTable" prefHeight="434.0" prefWidth="483.0" VBox.vgrow="ALWAYS">
                     <columns>
