--- a/src/main/resources/ErrorDialog.fxml
+++ b/src/main/resources/ErrorDialog.fxml
@@ -9,7 +9,7 @@
         <Insets bottom="10" left="10" right="10" top="10" />
     </padding>
     <Label text="Something went wrong" />
-    <TextArea fx:id="errorField" disable="true" prefHeight="400.0" prefWidth="400.0" wrapText="true" VBox.vgrow="ALWAYS" />
+    <TextArea fx:id="errorField" editable="false" prefHeight="400.0" prefWidth="400.0" wrapText="true" VBox.vgrow="ALWAYS" />
     <HBox alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
         <Button onAction="#confirm" text="OK" />
         <Region HBox.hgrow="ALWAYS" />
