--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
     <top>
         <VBox>
             <MenuBar>
