--- a/src/main/resources/Wireframe.fxml
+++ b/src/main/resources/Wireframe.fxml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.WireframeController">
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import java.lang.String?>
+<BorderPane prefHeight="496.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.WireframeController">
+    <stylesheets>
+        <String fx:value="/styles/sidebar.css"/>
+    </stylesheets>
+    <fx:define>
+        <ToggleGroup fx:id="sidebarGroup" />
+    </fx:define>
     <left>
-        <VBox fx:id="sidebar" prefHeight="486.0" prefWidth="161.0" spacing="10" BorderPane.alignment="CENTER_LEFT">
-            <padding>
-                <Insets bottom="10" left="10" right="10" top="10" />
-            </padding>
-            <style>
-                -fx-background-color: #2C3E50;
-            </style>
-            <Button maxWidth="Infinity" onAction="#onHome" text="Home" />
-            <Button maxWidth="Infinity" onAction="#onSettings" text="Settings" />
-            <Button maxWidth="Infinity" onAction="#onAbout" text="About" />
+        <VBox fx:id="sidebar" prefHeight="496.0" prefWidth="34.0" styleClass="sidebar" BorderPane.alignment="CENTER_LEFT">
+            <!-- Settings icon button -->
+            <ToggleButton fx:id="homeBtn" onAction="#onHome" styleClass="sidebar-button" toggleGroup="$sidebarGroup">
+                <graphic>
+                    <ImageView fitHeight="24" fitWidth="24" preserveRatio="true">
+                        <Image url="@/img/home.png" />
+                    </ImageView>
+                </graphic>
+            </ToggleButton>
+            <ToggleButton fx:id="settingsBtn" onAction="#onSettings" styleClass="sidebar-button" toggleGroup="$sidebarGroup">
+                <graphic>
+                    <ImageView fitHeight="24" fitWidth="24" preserveRatio="true">
+                        <Image url="@/img/accounts.png" />
+                    </ImageView>
+                </graphic>
+            </ToggleButton>
         </VBox>
     </left>
-
     <center>
-        <VBox fx:id="contentPane" prefHeight="486.0" prefWidth="720.0" spacing="10">
-            <padding>
-                <Insets bottom="20" left="20" right="20" top="20" />
-            </padding>
-            <Button text="Main Content" />
-        </VBox>
+        <StackPane fx:id="contentPane">
+            <fx:include fx:id="mainView" source="Main.fxml"/>
+            <fx:include fx:id="settingsView" source="Settings.fxml"/>
+        </StackPane>
     </center>
 </BorderPane>
