--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.MainController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="com.gjvandersloot.controller.MainController">
     <top>
         <VBox>
             <MenuBar>
                 <Menu text="File">
                     <!--                            <MenuItem text="New" onAction="#onNew"/>-->
                     <!--                            <MenuItem text="Open" onAction="#onOpen"/>-->
-                    <MenuItem text="New"/>
-                    <MenuItem text="Open"/>
+                    <MenuItem text="New" />
+                    <MenuItem text="Open" />
                 </Menu>
                 <!-- …other menus… -->
             </MenuBar>
@@ -23,7 +23,7 @@
             <VBox alignment="TOP_CENTER" prefHeight="529.0" prefWidth="150.0" GridPane.columnIndex="0">
                 <ToolBar style="-fx-background-color: #f0f0f0;">
                     <Button alignment="TOP_CENTER" onMouseClicked="#addSubscription" prefWidth="100" style="-fx-font-weight: bold;" text="Add account" />
-               <Hyperlink onAction="#reloadTree" text="Refresh" />
+               <Hyperlink onAction="#loadTree" text="Refresh" />
                 </ToolBar>
             <TextField fx:id="treeFilter" promptText="Search" />
                 <TreeView fx:id="treeView" onMouseClicked="#treeViewClicked" prefHeight="494.0" prefWidth="150.0" VBox.vgrow="ALWAYS">
@@ -36,6 +36,7 @@
                    <Button fx:id="show" onAction="#showSecret" text="Show" />
                    <Separator orientation="VERTICAL" />
                    <Button onAction="#addSecret" text="New" />
+               <Button mnemonicParsing="false" text="Delete" onAction="#delete" />
                    <Separator orientation="VERTICAL" />
                    <TextField fx:id="filterField" promptText="Search secret" />
                </ToolBar>
