--- a/src/main/resources/Settings.fxml
+++ b/src/main/resources/Settings.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="com.gjvandersloot.controller.SettingsController">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.controller.SettingsController">
     <padding>
-        <Insets bottom="10" left="10" right="10" top="10" />
+        <Insets top="10" right="10" bottom="10" left="10" />
     </padding>
     <TreeView fx:id="treeView">
 
