Added certificate authentication support for pfx.
Fixed deletion bug of key vault.
Also tidied up account load logic.

--- a/src/main/resources/WizardView.fxml
+++ b/src/main/resources/WizardView.fxml
@@ -48,7 +48,7 @@
                 <TextField HBox.hgrow="ALWAYS" fx:id="certPathField" promptText="Choose certificate..."/>
                 <Button fx:id="browseButton" text="Browse" onAction="#onBrowseCertificate"/>
             </HBox>
-            <PasswordField promptText="Enter certificate password (optional)"/>
+            <PasswordField fx:id="certPasswordField" promptText="Enter certificate password (optional)"/>
         </VBox>
     </StackPane>
 
