Changed loading hierarchy: According to oracle: 1) load data first 2) load GUI 3) load data into GUI
"defer expensive operations UNTIL the gui is ready"

--- a/src/main/resources/SecretView.fxml
+++ b/src/main/resources/SecretView.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <VBox xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.gjvandersloot.mvvm.view.SecretView"
-            prefHeight="400.0" prefWidth="600.0">
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="com.gjvandersloot.mvvm.view.SecretView"
+      prefHeight="400.0" prefWidth="600.0">
         <ToolBar style="-fx-background-color: #f0f0f0">
             <Button fx:id="copy" onAction="#copySecret" text="Copy" />
             <Button fx:id="show" onAction="#showSecret" text="Show" />
@@ -21,16 +22,8 @@
         </ToolBar>
         <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name">
-                    <cellValueFactory>
-                        <!--                                <PropertyValueFactory property="secretName" />-->
-                    </cellValueFactory>
-                </TableColumn>
-                <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value">
-                    <cellValueFactory>
-                        <!--                                <PropertyValueFactory property="display" />-->
-                    </cellValueFactory>
-                </TableColumn>
+                <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name"/>
+                <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value"/>
             </columns>
         </TableView>
     </VBox>
