--- a/src/main/resources/SecretView.fxml
+++ b/src/main/resources/SecretView.fxml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.VBox?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.gjvandersloot.mvvm.view.SecretView"
@@ -16,7 +11,7 @@
             <Button fx:id="show" onAction="#showSecret" text="Show" />
             <Separator orientation="VERTICAL" />
             <Button onAction="#addSecret" text="New" />
-            <Button mnemonicParsing="false" onAction="#delete" text="Delete" />
+            <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />
             <Separator orientation="VERTICAL" />
             <TextField fx:id="filterField" promptText="Search secret" />
         </ToolBar>
