A ton: Expanded fields for secrets and certificates view. Added escape binding to clear filter fields Added download button Logging Refactoring unused objects etc

--- a/src/main/resources/vault/SecretView.fxml
+++ b/src/main/resources/vault/SecretView.fxml
@@ -19,6 +19,8 @@
             <columns>
                 <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name"/>
                 <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value"/>
+                <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
+                <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
             </columns>
         </TableView>
     </VBox>
