--- a/src/main/resources/vault/KeyView.fxml
+++ b/src/main/resources/vault/KeyView.fxml
@@ -11,18 +11,14 @@
       fx:controller="com.gjvandersloot.mvvm.view.vault.KeyView"
       prefHeight="400.0" prefWidth="600.0">
     <ToolBar style="-fx-background-color: #f0f0f0">
-        <Button fx:id="downloadBtn" onAction="#download" text="Download" />
-        <!--        <Button fx:id="show" onAction="#showSecret" text="Show" />-->
-        <Separator orientation="VERTICAL" />
-        <!--        <Button onAction="#addSecret" text="New" />-->
-        <!--        <Button fx:id="delete" mnemonicParsing="false" onAction="#deleteSecret" text="Delete" />-->
+        <Button text="Copy public key" onAction="#copyPublicKey" />
+        <Button text="Download public key" onAction="#downloadPublicKey" />
         <Separator orientation="VERTICAL" />
         <TextField fx:id="filterField" promptText="Search secret" />
     </ToolBar>
     <HBox fx:id="warningBanner" visible="false" maxWidth="Infinity" managed="false" spacing="10"
           style="-fx-background-color: #fff8c4; -fx-padding: 10; -fx-border-color: #f2c200; -fx-border-width: 0 0 1 0;">
         <Label fx:id="warningMessage" HBox.hgrow="ALWAYS" wrapText="true" maxWidth="Infinity" style="-fx-text-fill: black;" />
-        <!--        <Button fx:id="closeBanner" style="-fx-background-color: transparent;" text="✕" />-->
         <Region HBox.hgrow="ALWAYS" />
         <Button fx:id="copyBannerMessage">
             <graphic>
@@ -32,10 +28,9 @@
             </graphic>
         </Button>
     </HBox>
-    <TableView fx:id="certsTable" VBox.vgrow="ALWAYS">
+    <TableView fx:id="keysTable" VBox.vgrow="ALWAYS">
         <columns>
             <TableColumn fx:id="nameColumn" prefWidth="150" text="Secret name"/>
-            <TableColumn fx:id="thumbPrintColumn" prefWidth="200" text="Thumbprint"/>
             <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
             <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
         </columns>
