--- a/src/main/resources/vault/KeyView.fxml
+++ b/src/main/resources/vault/KeyView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.StackPane?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.gjvandersloot.mvvm.view.vault.KeyView"
@@ -14,6 +15,13 @@
         <Button text="Copy public key" onAction="#copyPublicKey" />
         <Button text="Download public key" onAction="#downloadPublicKey" />
         <Separator orientation="VERTICAL" />
+        <Button onAction="#reload">
+            <graphic>
+                <ImageView fitHeight="16" fitWidth="16" preserveRatio="true">
+                    <Image url="@/img/refresh.png" />
+                </ImageView>
+            </graphic>
+        </Button>
         <TextField fx:id="filterField" promptText="Search secret" />
     </ToolBar>
     <HBox fx:id="warningBanner" visible="false" maxWidth="Infinity" managed="false" spacing="10"
@@ -28,11 +36,14 @@
             </graphic>
         </Button>
     </HBox>
-    <TableView fx:id="keysTable" VBox.vgrow="ALWAYS">
-        <columns>
-            <TableColumn fx:id="nameColumn" prefWidth="150" text="Secret name"/>
-            <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
-            <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
-        </columns>
-    </TableView>
+    <StackPane>
+        <TableView fx:id="keysTable" VBox.vgrow="ALWAYS">
+            <columns>
+                <TableColumn fx:id="nameColumn" prefWidth="150" text="Secret name"/>
+                <TableColumn fx:id="statusColumn" prefWidth="200" text="Status"/>
+                <TableColumn fx:id="expirationColumn" prefWidth="200" text="Expiration date"/>
+            </columns>
+        </TableView>
+        <ProgressIndicator fx:id="progressIndicator"/>
+    </StackPane>
 </VBox>
