Refactor: Got rid of the mvvm namespace, as this app won't become fully MVVM in the short term, as JavaFX offers no proper support out of the box.

--- a/src/main/resources/CreateSecretView.fxml
+++ b/src/main/resources/CreateSecretView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane hgap="10" prefHeight="118.0" prefWidth="391.0" vgap="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.mvvm.view.CreateSecretView">
+<GridPane hgap="10" prefHeight="118.0" prefWidth="391.0" vgap="10" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.view.CreateSecretView">
     <columnConstraints>
         <ColumnConstraints halignment="RIGHT" />
         <ColumnConstraints hgrow="ALWAYS" />
