--- a/src/main/resources/TabView.fxml
+++ b/src/main/resources/TabView.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.TabPane?>
-<TabPane fx:controller="com.gjvandersloot.mvvm.view.TabView" xmlns="http://javafx.com/javafx"
+<TabPane fx:controller="com.gjvandersloot.view.TabView" xmlns="http://javafx.com/javafx"
          fx:id="tabPane"
          xmlns:fx="http://javafx.com/fxml"
          prefHeight="400.0" prefWidth="600.0">
