--- a/src/main/resources/vault/SecretView.fxml
+++ b/src/main/resources/vault/SecretView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.mvvm.view.vault.SecretView">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.gjvandersloot.view.vault.SecretView">
     <ToolBar style="-fx-background-color: #f0f0f0">
         <Button fx:id="copy" onAction="#copySecret" text="Copy" />
         <Button fx:id="show" onAction="#showSecret" text="Show" />
