--- a/src/main/resources/vault/SecretView.fxml
+++ b/src/main/resources/vault/SecretView.fxml
@@ -33,8 +33,8 @@
             </graphic>
         </Button>
     </HBox>
-    <StackPane>
-        <TableView fx:id="secretsTable" VBox.vgrow="ALWAYS">
+    <StackPane VBox.vgrow="ALWAYS">
+        <TableView fx:id="secretsTable">
             <columns>
                 <TableColumn fx:id="secretsColumn" prefWidth="150" text="Secret name" />
                 <TableColumn fx:id="secretValueColumn" prefWidth="200" text="Value" />
