Fix CSS error. Always fill settings screen vertically

--- a/src/main/resources/Settings.fxml
+++ b/src/main/resources/Settings.fxml
@@ -8,7 +8,7 @@
     <padding>
         <Insets top="10" right="10" bottom="10" left="10" />
     </padding>
-    <TreeView fx:id="treeView">
+    <TreeView fx:id="treeView" VBox.vgrow="ALWAYS">
 
     </TreeView>
 </VBox>
